--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -164,6 +164,10 @@
      .admin-advert-update-form .group{
           width: 95%;
      }
+
+     .agent-ref-shop-card{
+          width: 80%;
+     }
 }
 
 
