--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -347,6 +347,9 @@ textarea{
      font-size: 1rem;
      margin: 10px 5%;
      font-weight: 500;
+     display: flex;
+     flex-direction: row;
+     gap: 5px;
 }
 .hiring-page ul li{
      font-size: 0.95rem;
@@ -4291,8 +4294,9 @@ textarea{
 }
 
 .main-notification-card{
-     width: 350px;
-     padding: 20px 5px;
+     min-width: 300px;
+     max-width: 330px;
+     padding: 15px 20px;
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -4305,6 +4309,8 @@ textarea{
      transition: all 0.5s ease;
      z-index: 999;
      font-size: 0.85rem;
+     font-weight: 700;
+     letter-spacing: 0.65x;
 }
 
 .main-notification-card.fail{
