--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -13,7 +13,7 @@
      --back-gold-color-v1: #925602;
      --back-color-red1: #FA3C53;
      --text-color-para1: #444444;
-     --text-color-title: #12394F;
+     --text-color-title: rgb(18, 57, 79);
      --text-color-title-transparent: #12394f50;
      --text-color-para2: #6E8794;
      --text-color-black: #000000;
@@ -4192,6 +4192,7 @@ textarea{
 
 .admin-navbar .dash-nav-container{
      width: 100%;
+     height: 75%;
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -4247,20 +4248,23 @@ textarea{
      display: flex;
      flex-direction: row;
      align-items: center;
-     justify-content: flex-start;
+     justify-content: space-between;
      flex-wrap: wrap;
      margin-bottom: 20px;
-     gap: 20px;
+     gap: 10px;
+     padding-inline: 10px;
+     padding-block: 5px;
 }
 
 .dash-title{
      display: flex;
      flex-direction: row;
      align-items: center;
-     justify-content: flex-start;
+     justify-content: space-between;
      padding-inline:  20px;
-     min-width: 50%;
+     min-width: 100%;
      gap: 5px;
+     flex-wrap: wrap;
 }
 
 .dash-title h2{
@@ -4371,7 +4375,10 @@ textarea{
      font-size: 1.2rem;
      color: var(--text-color-title);
      font-weight: 700;
+     text-align: center;
 }
+
+
 
 .dash-card-info i {
      position: absolute;
@@ -4862,6 +4869,30 @@ textarea{
      border: 1.4px solid var(--back-color-gold2);
 }
 
+.admin-web-visit-card{
+     width: 20%;
+     padding: 30px 10px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     gap: 10px;
+     box-shadow: 0.2px 0.2px 4px var(--text-color-para2);
+     border-radius: 20px;
+     background-color: var(--white-text);
+}
+
+.admin-web-visit-card b {
+     font-size: 2.2rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+}
+
+.admin-web-visit-card p{
+     font-size: 0.9rem;
+     font-weight: 700;
+     color: var(--text-color-para2);
+}
 /* buttons */
 
 .admin-action-btn{
@@ -4989,6 +5020,7 @@ textarea{
      padding-block: 5px;
      font-weight: 700;
      gap: 5px;
+     position: relative;
 }
 
 .agent-navbar .active, .agent-navbar a:hover {
@@ -5275,6 +5307,32 @@ textarea{
 
 .agent-payment-row span {
      font-size: 0.85rem;
+     font-weight: 600;
+}
+
+.agent-home-content-card {
+     width: 20%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     gap: 10px;
+     box-shadow: 0.2px 0.2px 4px var(--gray-text);
+     border-radius: 20px;
+     margin: 10px auto;
+     padding: 20px 10px;
+     justify-self: flex-start;
+}
+
+.agent-home-content-card b {
+     font-size: 2.8rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+}
+
+.agent-home-content-card p{
+     font-size: 0.95rem;
+     color: var(--text-color-para2);
      font-weight: 600;
 }
 
